# auth-service

./: README.md  pyproject.toml
auth_service/: main.py
auth_service/basic/: engine.py  schema.py  views.py
auth_service/core/: config_manager.py  controllers.py  database.py  engine.py  models.py  schema.py  utils.py
auth_service/core/config/: __init__.py  base.py  dev.py  prod.py
backend/: Dockerfile  README.md  pyproject.toml  req.pip
backend-new/: Dockerfile  controllers.py  database.py  main.py  models.py  req.pip  runner.py  schemas.py  settings.py  utils.py
backend-new/app/: controllers.py  database.py  models.py  schemas.py  settings.py  utils.py
backend-new/app/routers/: auth.py
backend-new/routers/: auth.py
backend/auth_service/: main.py
backend/auth_service/basic/: views.py
backend/auth_service/core/: config_manager.py  controllers.py  engine.py  models.py  schema.py  utils.py
backend/auth_service/core/config/: dev.py
backend/test/: test_basic.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  Home.tsx  theme.ts
frontend/src/SignIn/: SignIn.tsx  SignInCard.tsx
frontend/src/service/: api-client.ts
frontend/src/temp/SignInSide/: SignInSide.tsx
frontend/src/temp/SignInSide/components/: Content.tsx  SignInCard.tsx
frontend/src/temp/Theme/customizations/: inputs.tsx  navigation.tsx
test/: mock.py  test_.py  test_basic.py
